Closed
Bug 486624
Opened 17 years ago
Closed 17 years ago
AppendFacesFromFontFile is called twice for the same font file.
Categories
(Core :: Graphics, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: hiro, Unassigned)
Details
Attachments
(1 file, 1 obsolete file)
|
2.03 KB,
patch
|
blassey
:
review+
vlad
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; ja; rv:1.8.0.4) Gecko/20060508 Firefox/3.0
Build Identifier:
AppendFacesFromFontFile is called twice for the same font file becase FindFirstFileW is case-insensitive.
Reproducible: Always
| Reporter | ||
Updated•17 years ago
|
OS: Other → Windows CE
Hardware: Other → ARM
| Reporter | ||
Comment 1•17 years ago
|
||
Attachment #370788 -
Flags: review?(bugmail)
Updated•17 years ago
|
Attachment #370788 -
Flags: review?(bugmail) → review-
Comment 2•17 years ago
|
||
Comment on attachment 370788 [details] [diff] [review]
A patch
the case sensitivity of FindFirstFile isn't actually documented (that I can find anyway). So lets use FindFirstFileEx with 0 passed for dwAdditionalFlags which will specify case-insensitive.
I'll r+ with that change, but I want to double check the arguments you pass to FindFirstFileEx, so r- for now.
| Reporter | ||
Comment 3•17 years ago
|
||
Use FindFirstFileExW instead.
Attachment #370788 -
Attachment is obsolete: true
Attachment #371562 -
Flags: review?(bugmail)
Updated•17 years ago
|
Attachment #371562 -
Flags: review?(bugmail) → review+
| Reporter | ||
Updated•17 years ago
|
Keywords: checkin-needed
Comment 4•17 years ago
|
||
Comment on attachment 371562 [details] [diff] [review]
Revised patch
requesting review from module owner
Attachment #371562 -
Flags: review?(vladimir)
Updated•17 years ago
|
Keywords: checkin-needed
Attachment #371562 -
Flags: review?(vladimir) → review+
Comment 5•17 years ago
|
||
Status: UNCONFIRMED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•