bug 486624 -  AppendFacesFromFontFile is called twice for the same font file r=blassey, vlad